# databricksMCPserver

./: DATABRICKS_README.md  databricks_server.py  pyproject.toml
